--- a/Web/TeleConsult.Web/Views/Account/Register.cshtml
+++ b/Web/TeleConsult.Web/Views/Account/Register.cshtml
@@ -2,6 +2,7 @@
 @using TeleConsult.Common
 @{
     ViewBag.Title = GlobalConstants.Register;
+    ViewBag.HideSiteMap = true;
 }
 
 <h2>@ViewBag.Title.</h2>
