--- a/Web/TeleConsult.Web/Content/Site.css
+++ b/Web/TeleConsult.Web/Content/Site.css
@@ -2,22 +2,241 @@
     padding-top: 70px;
 }
 
+textarea {
+    resize: vertical;
+}
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
+.logo, .menu-logo, .login-logo {
+    margin: 0;
+    height: 100%;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+.menu-logo img {
+    height: 40px;
 }
+
+.login-logo img {
+    height: 400px;
+}
+
+.logo img {
+    margin-top: 30px;
+    height: 450px;
+}
+
+.down {
+    margin-top: 15px;
+}
+
+.menu a.image {
+    margin-top: 20px;
+    display: block;
+    height: 130px;
+    text-indent: -9999px;
+}
+
+.menu a.hospital {
+    background: url(Images/hospital.png) no-repeat top;
+}
+
+.menu a.specialist {
+    background: url(Images/specialist.png) no-repeat top;
+}
+
+.menu a.schedule {
+    background: url(Images/schedule.png) no-repeat top;
+}
+
+.menu a.logs {
+    background: url(Images/logs.png) no-repeat top;
+}
+
+.menu a.specialties {
+    background: url(Images/specialties.png) no-repeat top;
+}
+
+.menu a.new-consultation {
+    background: url(Images/new-consultation.png) no-repeat top;
+}
+
+.menu a.sent-consultations {
+    background: url(Images/sent-consultations.png) no-repeat top;
+}
+
+.menu a.recieved-consultations {
+    background: url(Images/recieved-consultations.png) no-repeat top;
+}
+
+.menu a.link {
+    text-decoration: none;
+    color: black;
+}
+
+.vertical {
+    display: table;
+    height: 170px;
+}
+
+.vertical p {
+    display: table-cell; 
+    vertical-align: middle; 
+}
+
+.k-edit-form-container .form-control {
+    height: 20px;
+}
+
+.kendo-form {
+    margin-left: 20px;
+}
+
+.field-validation-error {
+    color: #ff0000;
+}
+
+.field-validation-valid {
+    display: none;
+}
+
+.actionLink {
+    width : 200px;
+}
+
+.view {
+    margin-top: 9px;
+    color: blue; 
+}
+
+.btn-danger, div.validation-error {
+    background-image: none;
+    background-color: #F44444;
+    border: 1px solid #F44444;
+}
+
+div.validation-error {
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    color: #fff;
+    padding: 2px;
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    font-size: 12px;
+}
+
+    div.validation-error:empty, .alert.alert-danger:empty,
+    .form-group:empty {
+        display: none !important; /*overrides display block from jq validate*/
+    }
+
+    div.validation-error:after, div.validation-error:before {
+        bottom: 100%;
+        left: 4%;
+        border: solid transparent;
+        content: " ";
+        height: 0;
+        width: 0;
+        position: absolute;
+        pointer-events: none;
+        border-bottom-color: #F44444;
+    }
+
+    div.validation-error:after {
+        border-color: rgba(136, 183, 213, 0);
+        border-width: 5px;
+        margin-left: -5px;
+    }
+
+    div.validation-error:before {
+        border-color: rgba(245, 234, 228, 0);
+        border-width: 7px;
+        margin-left: -7px;
+    }
+
+input.validation-error, select.validation-error, div.validation-error-border, textarea.validation-error {
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border: 3px solid #F44444;
+}
+
+.modal {
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) { 
+  .modal:before {
+    display: inline-block;
+    vertical-align: middle;
+    content: " ";
+    height: 100%;
+  }
+}
+
+.cursor-pointer {
+    cursor: pointer;
+}
+
+.modal-dialog {
+  display: inline-block;
+  text-align: left;
+  vertical-align: middle;
+}
+
+.pull-md-left { float: left !important; }
+
+.gj-grid-bootstrap-toolbar [data-role="title"] {
+    font-size: 16px;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 34px;
+    margin: 0px;
+    word-break: break-word;
+}
+
+.gj-grid-bootstrap-toolbar .toolbar-btn-group {
+    margin-left: 20px;
+}
+
+.gj-grid-table > tbody > tr.active td {
+    border-color: #fadb9a;
+    background-color: #fdf0d4;
+    font-weight: bold;
+}
+
+@media (min-width: 1800px) {
+    .container {
+        max-width: 1700px;
+    }
+}
+
+.breadcrumb {
+    display: inline-block;
+    color: #777;
+    padding: 6px 15px;
+    margin: 5px 0;
+    background-color: #f5f5f5;
+    border: 1px solid #ddd;
+}
+
+.breadcrumb a {
+    color: #337ab7;
+}
+
+a, a:focus {
+    cursor: pointer;
+    vertical-align: baseline;
+    background: transparent;
+    color: #333;
+    text-decoration: none;
+}
+
+    a:hover {
+        text-decoration: none;
+        color: #333;
+        opacity: 0.7;
+    }
