Add Specialists Additional fixes on existing modules StyleCop all.

--- a/Web/TeleConsult.Web/Areas/Admin/Views/Menu/Index.cshtml
+++ b/Web/TeleConsult.Web/Areas/Admin/Views/Menu/Index.cshtml
@@ -21,8 +21,8 @@
             @Html.ActionLink(GlobalConstants.HospitalsControllerTitle, "Index", "Hospital", null, new { @class = "link" })
         </div>
         <div class="col-md-3 text-center">
-            @Html.ActionLink(GlobalConstants.SpecialistsControllerTitle, "Index", "Specialists", null, new { @class = "specialist image" })
-            @Html.ActionLink(GlobalConstants.SpecialistsControllerTitle, "Index", "Specialists", null, new { @class = "link" })
+            @Html.ActionLink(GlobalConstants.SpecialistsControllerTitle, "Index", "Specialist", null, new { @class = "specialist image" })
+            @Html.ActionLink(GlobalConstants.SpecialistsControllerTitle, "Index", "Specialist", null, new { @class = "link" })
         </div>
         <div class="col-md-3 text-center">
             @Html.ActionLink(GlobalConstants.SpecialtiesControllerTitle, "Index", "Speciality", null, new { @class = "specialties image" })
