Add Logger for every action Add Admin screen for logged actions.

--- a/Web/TeleConsult.Web/Areas/Admin/Views/Menu/Index.cshtml
+++ b/Web/TeleConsult.Web/Areas/Admin/Views/Menu/Index.cshtml
@@ -35,8 +35,8 @@
     </div>
     <div class="row">
         <div class="col-md-3 text-center">
-            @Html.ActionLink(GlobalConstants.LogsControllerTitle, "Index", "Logs", null, new { @class = "logs image" })
-            @Html.ActionLink(GlobalConstants.LogsControllerTitle, "Index", "Logs", null, new { @class = "link" })
+            @Html.ActionLink(GlobalConstants.LogsControllerTitle, "Index", "Log", null, new { @class = "logs image" })
+            @Html.ActionLink(GlobalConstants.LogsControllerTitle, "Index", "Log", null, new { @class = "link" })
         </div>
     </div>
 </div>
