--- a/Web/TeleConsult.Web/Areas/Admin/Views/Specialist/Index.cshtml
+++ b/Web/TeleConsult.Web/Areas/Admin/Views/Specialist/Index.cshtml
@@ -7,7 +7,7 @@
 }
 
 @section scripts {
-    <script type="text/javascript" src="@Url.Content("~/Areas/Admin/Scripts/Specialist.js")"></script>
+    @Html.RenderScripts("~/Areas/Admin/Scripts/Specialist.js")
 }
 
 <div>
