--- a/Web/TeleConsult.Web/Content/Site.css
+++ b/Web/TeleConsult.Web/Content/Site.css
@@ -240,3 +240,11 @@ a, a:focus {
         color: #333;
         opacity: 0.7;
     }
+
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
