--- a/Web/TeleConsult.Web/Views/Shared/_Layout.cshtml
+++ b/Web/TeleConsult.Web/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <title>@ViewBag.Title</title>
 
     @Styles.Render("~/Content/css")
+    @RenderSection("styles", false)
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/common")
     @RenderSection("scripts", required: false)
