--- a/Web/TeleConsult.Web/Views/Shared/_MenuPartial.cshtml
+++ b/Web/TeleConsult.Web/Views/Shared/_MenuPartial.cshtml
@@ -7,7 +7,7 @@
 <ul class="nav navbar-nav">
     @if (User.IsInRole(GlobalConstants.SpecialistRoleName))
     {
-        <li>@Html.ActionLink(GlobalConstants.ConsultationsControllerTitle, ActionName, ControllerName, new { area = "Consultations" }, null)</li>
+        <li>@Html.ActionLink(GlobalConstants.ConsultationsControllerTitle, ActionName, ControllerName, new { area = GlobalConstants.ConsultationAreaName }, null)</li>
     }
     @if (User.IsInRole(GlobalConstants.AdministratorRoleName))
     {
