Add Consultation Request: Add BloodExaminations Add Urinalysis Add VisualExaminations

--- a/Web/TeleConsult.Web/Content/Site.css
+++ b/Web/TeleConsult.Web/Content/Site.css
@@ -248,3 +248,38 @@ a, a:focus {
     -ms-user-select: none;
     user-select: none;
 }
+
+.gj-grid-row::after {
+    clear: both;
+    display: table;
+    content: " ";
+}
+
+.modal .modal-large { 
+    width: 1200px; 
+}
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+}
+
+.examination-image {
+    max-width: 100%;
+    height: auto;
+}
