--- a/Web/TeleConsult.Web/Areas/Consultations/Views/Consultation/RequestConsultation.cshtml
+++ b/Web/TeleConsult.Web/Areas/Consultations/Views/Consultation/RequestConsultation.cshtml
@@ -8,43 +8,98 @@
 }
 
 @section scripts {
-    @Html.RenderScripts("~/Areas/Consultations/Scripts/RequestConsultation.js")
+    @Html.RenderScripts("~/Areas/Consultations/Scripts/RequestConsultation.js",
+                        "~/Areas/Consultations/Scripts/BloodExamination.js",
+                        "~/Areas/Consultations/Scripts/Urinalysis.js",
+                        "~/Areas/Consultations/Scripts/VisualExamination.js",
+                        "~/Scripts/Libs/underscore.js")
 }
 
 @Html.Hidden("GetDiagnosisUrl", Url.Action("GetDiagnosis", "Consultation"))
 @Html.Hidden("HomePageUrl", Url.Action("Index", "Menu", new { area = GlobalConstants.ConsultationAreaName }, null))
 
 <div class="row well">
-    <form id="requestForm">
-        <div class="form-horizontal">
-            <fieldset>
-                @Html.EditorFor(m => m.ViewModel.PatientInitials)
-                @Html.EditorFor(m => m.ViewModel.PatientAge)
-                @Html.EditorFor(m => m.ViewModel.Gender, new { ListItems = Model.Genders })
+    <form id="requestForm" class="form-horizontal">
+        <fieldset>
+            @Html.AntiForgeryToken()
+            @Html.EditorFor(m => m.ViewModel.PatientInitials)
+            @Html.EditorFor(m => m.ViewModel.PatientAge)
+            @Html.EditorFor(m => m.ViewModel.Gender, new { ListItems = Model.Genders })
 
-                <div class="form-group">
-                    @Html.EditorFor(m => m.ViewModel.PreliminaryDiagnosisCode)
-                    @Html.EditorFor(m => m.ViewModel.PreliminaryDiagnosisDescription)
-                </div>
+            <div class="form-group">
+                @Html.EditorFor(m => m.ViewModel.PreliminaryDiagnosisCode)
+                @Html.EditorFor(m => m.ViewModel.PreliminaryDiagnosisDescription)
+            </div>
 
-                @Html.EditorFor(m => m.ViewModel.Anamnesis)
-                @Html.EditorFor(m => m.ViewModel.SpecialityId, new { ListItems = Model.Specialities })
-                @Html.EditorFor(m => m.ViewModel.Type, new { ListItems = Model.Types })
+            @Html.EditorFor(m => m.ViewModel.Anamnesis)
+            @Html.EditorFor(m => m.ViewModel.SpecialityId, new { ListItems = Model.Specialities })
+            @Html.EditorFor(m => m.ViewModel.Type, new { ListItems = Model.Types })
 
-                @if (Model.IsConsultation)
-                {
-                    <div class="form-group">
-                        @Html.EditorFor(m => m.ViewModel.FinalDiagnosisCode)
-                        @Html.EditorFor(m => m.ViewModel.FinalDiagnosisDescription)
+            <div class="form-group row">
+                <div data-role="wrapper" class="gj-grid-wrapper">
+                    <div data-role="toolbar" class="gj-grid-row">
+                        <div class="col-md-10 col-sm-12 no-padding-col">
+                            <h4 data-role="title">Кръвни изследвания</h4>
+                        </div>
+                        <div class="col-md-2 col-sm-12 no-padding-col">
+                            <div class="pull-right">
+                                <button type="button" class="btn btn-success" id="addBloodExamination">Добави</button>
+                            </div>
+                        </div>
                     </div>
+                    <table id="bloodExaminationsGrid"></table>
+                </div>       
+            </div>
 
-                    @Html.EditorFor(m => m.ViewModel.Conclusion)
-                }
-
-                <div class="pull-right">
-                    <button id="btnSave" type="button" class="btn btn-primary" data-url="@Url.Action("Send")">@GlobalConstants.Send</button>
+            <div class="form-group row">
+                <div data-role="wrapper" class="gj-grid-wrapper">
+                    <div data-role="toolbar" class="gj-grid-row">
+                        <div class="col-md-10 col-sm-12 no-padding-col">
+                            <h4 data-role="title">Изследвания урина</h4>
+                        </div>
+                        <div class="col-md-2 col-sm-12 no-padding-col">
+                            <div class="pull-right">
+                                <button type="button" class="btn btn-success" id="addUrinalysis">Добави</button>
+                            </div>
+                        </div>
+                    </div>
+                    <table id="urinalysisGrid"></table>
                 </div>
-            </fieldset>
-        </div>
+            </div>
+
+            <div class="form-group row">
+                <div data-role="wrapper" class="gj-grid-wrapper">
+                    <div data-role="toolbar" class="gj-grid-row">
+                        <div class="col-md-10 col-sm-12 no-padding-col">
+                            <h4 data-role="title">Образни изследвания</h4>
+                        </div>
+                        <div class="col-md-2 col-sm-12 no-padding-col">
+                            <div class="pull-right">
+                                <button type="button" class="btn btn-success" id="addVisualExamination">Добави</button>
+                            </div>
+                        </div>
+                    </div>
+                    <table id="visualExaminationsGrid"></table>
+                </div>
+            </div>
+
+            @if (Model.IsConsultation)
+            {
+                <div class="form-group">
+                    @Html.EditorFor(m => m.ViewModel.FinalDiagnosisCode)
+                    @Html.EditorFor(m => m.ViewModel.FinalDiagnosisDescription)
+                </div>
+
+                @Html.EditorFor(m => m.ViewModel.Conclusion)
+            }
+
+            <div class="pull-right">
+                <button id="btnSave" type="button" class="btn btn-primary" data-url="@Url.Action("Send")">@GlobalConstants.Send</button>
+            </div>
+        </fieldset>
     </form>
 </div>
+
+@Html.Partial("_BloodExaminationDialog")
+@Html.Partial("_UrinalysisDialog")
+@Html.Partial("_VisualExaminationDialog")
