--- a/Web/TeleConsult.Web/Views/Shared/_Layout.cshtml
+++ b/Web/TeleConsult.Web/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
 
-    @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/main/css")
     @RenderSection("styles", false)
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/common")
