--- a/Web/TeleConsult.Web/Areas/Consultations/Views/Menu/Index.cshtml
+++ b/Web/TeleConsult.Web/Areas/Consultations/Views/Menu/Index.cshtml
@@ -17,16 +17,16 @@
     <hr />
     <div class="row">
         <div class="col-md-4 text-center">
-            @Html.ActionLink(GlobalConstants.NewConsultationsControllerTitle, "RequestConsultation", "Consultation", null, new { @class = "new-consultation image" })
-            @Html.ActionLink(GlobalConstants.NewConsultationsControllerTitle, "RequestConsultation", "Consultation", null, new { @class = "link" })
+            @Html.ActionLink(GlobalConstants.NewConsultationsControllerTitle, "Request", "Consultation", null, new { @class = "new-consultation image" })
+            @Html.ActionLink(GlobalConstants.NewConsultationsControllerTitle, "Request", "Consultation", null, new { @class = "link" })
         </div>
         <div class="col-md-4 text-center">
             @Html.ActionLink(GlobalConstants.SentConsultationsControllerTitle, "Sent", "Consultation", null, new { @class = "sent-consultations image" })
             @Html.ActionLink(GlobalConstants.SentConsultationsControllerTitle, "Sent", "Consultation", null, new { @class = "link" })
         </div>
         <div class="col-md-4 text-center">
-            @Html.ActionLink(GlobalConstants.RecievedConsultationsControllerTitle, "Recieved", "Consultation", null, new { @class = "recieved-consultations image" })
-            @Html.ActionLink(GlobalConstants.RecievedConsultationsControllerTitle, "Recieved", "Consultation", null, new { @class = "link" })
+            @Html.ActionLink(GlobalConstants.RecievedConsultationsControllerTitle, "Received", "Consultation", null, new { @class = "recieved-consultations image" })
+            @Html.ActionLink(GlobalConstants.RecievedConsultationsControllerTitle, "Received", "Consultation", null, new { @class = "link" })
         </div>
     </div>
 </div>
