--- a/Web/TeleConsult.Web/Areas/Consultations/Views/Shared/_VisualExaminationDialog.cshtml
+++ b/Web/TeleConsult.Web/Areas/Consultations/Views/Shared/_VisualExaminationDialog.cshtml
@@ -11,7 +11,9 @@
             <div class="modal-body">
                 <form class="form-horizontal modal-form" id="visualExaminationForm">
                     <fieldset>
-                        @Html.Hidden("visualExaminationId")
+                        @Html.Hidden("visualExaminationCounter")
+
+                        @Html.HiddenFor(m => m.VisualExaminationViewModel.Id)
 
                         @Html.EditorFor(m => m.VisualExaminationViewModel.Type, new { ListItems = Model.VisualExaminationTypes })
 
