--- a/Web/TeleConsult.Web/Areas/Consultations/Views/Shared/_ConsultationsTable.cshtml
+++ b/Web/TeleConsult.Web/Areas/Consultations/Views/Shared/_ConsultationsTable.cshtml
@@ -1,4 +1,6 @@
-﻿<div>
+﻿@Html.Hidden("consultationUrl", Url.Action("Index", "Consultation"))
+
+<div>
     <div class="row well">
         <div class="col-lg-4 col-md-6 col-sm-8 col-xs-12 form-group">
             <label for="searchName">Лечебно заведение </label>
