--- a/Web/TeleConsult.Web/Views/Shared/DisplayTemplates/CodeTemplate.cshtml
+++ b/Web/TeleConsult.Web/Views/Shared/DisplayTemplates/CodeTemplate.cshtml
@@ -2,5 +2,5 @@
 
 @Html.LabelFor(m => m, htmlAttributes: new { @class = "col-md-2 col-sm-3 col-xs-12 modal-label" })
 <div class="col-md-2 col-sm-3 col-xs-12">
-    @Html.TextBoxFor(m => m, new { @class = "form-control" })
+    @Html.DisplayTextFor(m => m)
 </div>
