--- a/Web/TeleConsult.Web/Areas/Consultations/Views/Shared/_BloodExaminationDialog.cshtml
+++ b/Web/TeleConsult.Web/Areas/Consultations/Views/Shared/_BloodExaminationDialog.cshtml
@@ -46,7 +46,11 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" id="btnSaveBloodExamination" class="btn btn-primary">Запис</button>
+                @if (!Model.IsConsultation && string.IsNullOrEmpty(Model.ViewModel.FinalDiagnosisCode))
+                {
+                    <button type="button" id="btnSaveBloodExamination" class="btn btn-primary">Запис</button>
+                }
+               
                 <button type="button" id="btnCancelBloodExamination" class="btn btn-default">Отказ</button>
             </div>
         </div>
