--- a/Web/TeleConsult.Web/Areas/Consultations/Views/Shared/_VisualExaminationDialog.cshtml
+++ b/Web/TeleConsult.Web/Areas/Consultations/Views/Shared/_VisualExaminationDialog.cshtml
@@ -47,7 +47,11 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" id="btnSaveVisualExamination" class="btn btn-primary">Запис</button>
+                @if (!Model.IsConsultation && string.IsNullOrEmpty(Model.ViewModel.FinalDiagnosisCode))
+                {
+                    <button type="button" id="btnSaveVisualExamination" class="btn btn-primary">Запис</button>
+                }
+                
                 <button type="button" id="btnCancelVisualExamination" class="btn btn-default">Отказ</button>
             </div>
         </div>
