--- a/Web/TeleConsult.Web/Views/Shared/DisplayTemplates/SingleLineTemplate.cshtml
+++ b/Web/TeleConsult.Web/Views/Shared/DisplayTemplates/SingleLineTemplate.cshtml
@@ -3,7 +3,6 @@
 <div class="form-group row">
     @Html.LabelFor(m => m, htmlAttributes: new { @class = "col-md-2 col-sm-3 col-xs-12 modal-label" })
     <div class="col-md-2 col-sm-3 col-xs-12">
-        @Html.TextBoxFor(m => m, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m, "", new { @class = "text-danger" })
+        @Html.DisplayTextFor(m => m)
     </div>
 </div>
