--- a/Web/TeleConsult.Web/Views/Shared/_MenuPartial.cshtml
+++ b/Web/TeleConsult.Web/Views/Shared/_MenuPartial.cshtml
@@ -13,6 +13,7 @@
     {
         <li>@Html.ActionLink(GlobalConstants.AdministrationControllerTitle, ActionName, ControllerName, new { area = GlobalConstants.AdminAreaName }, null)</li>
     }
+    <li>@Html.ActionLink(GlobalConstants.StatisticsControllerTitle, ActionName, "Home", new { area = GlobalConstants.StatisticsAreaName }, null)</li>
 </ul>
 
 
