Add Operator role and user to handle emergency Consultations

--- a/Web/TeleConsult.Web/Areas/Consultations/Views/Shared/_ConsultationsTable.cshtml
+++ b/Web/TeleConsult.Web/Areas/Consultations/Views/Shared/_ConsultationsTable.cshtml
@@ -12,7 +12,7 @@
     <div class="row well">
         <div class="col-lg-4 col-md-6 col-sm-8 col-xs-12 form-group">
             <label for="searchName">Лечебно заведение </label>
-            <input type="text" id="searchName" class="form-control" />
+            <input type="text" id="searchHospital" class="form-control" />
         </div>
         <div class="col-lg-10 col-md-3 col-sm-8 col-xs-12 form-group">
             <button id="btnSearch" type="button" class="btn btn-primary">Търси</button>
