--- a/Web/TeleConsult.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Web/TeleConsult.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.AspNet.Identity
+﻿@using TeleConsult.Web.Infrastructure.IdentityExtensions
+
 @if (Request.IsAuthenticated)
 {
     using (Html.BeginForm("LogOff", "Account", new { Area = "" },  FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
@@ -7,7 +8,7 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li>
-            @Html.ActionLink("Здравейте " + User.Identity.GetUserName() + "!", "Index", "Manage", new { Area = "" }, htmlAttributes: new { title = "Manage" })
+            @Html.ActionLink("Здравейте " + CustomIdentityExtensions.GetUserName(User) + "!", "Index", "Manage", new { Area = "" }, htmlAttributes: new { title = "Manage" })
         </li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Изход</a></li>
     </ul>
