--- a/Web/TeleConsult.Web/Areas/Consultations/Views/Shared/_ConsultationsTable.cshtml
+++ b/Web/TeleConsult.Web/Areas/Consultations/Views/Shared/_ConsultationsTable.cshtml
@@ -9,13 +9,26 @@
 @Html.HiddenFor(m => m.CurrentSpecialistId)
 
 <div>
-    <div class="row well">
+    <div id="searchArea" class="row well">
         <div class="col-lg-4 col-md-6 col-sm-8 col-xs-12 form-group">
-            <label for="searchName">Лечебно заведение </label>
+            <label for="searchName">Лечебно заведение</label>
             <input type="text" id="searchHospital" class="form-control" />
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12 form-group">
+            <label for="searchGender">Пол</label>
+            @Html.DropDownList("searchGender", Model.Genders, "Избери...", new { @class = "form-control" })
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12 form-group">
+            <label for="searchGender">Специалност</label>
+            @Html.DropDownList("searchSpeciality", Model.AllSpecialities, "Избери...", new { @class = "form-control" })
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12 form-group">
+            <label for="searchGender">Тип</label>
+            @Html.DropDownList("searchType", Model.Types, "Избери...", new { @class = "form-control" })
         </div>
         <div class="col-lg-10 col-md-3 col-sm-8 col-xs-12 form-group">
             <button id="btnSearch" type="button" class="btn btn-primary">Търси</button>
+            <button id="btnClear" type="button" class="btn btn-default">Изчисти</button>
         </div>
     </div>
 
