--- a/Web/TeleConsult.Web/Areas/Operator/Views/Home/Index.cshtml
+++ b/Web/TeleConsult.Web/Areas/Operator/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model TeleConsult.Web.Areas.Operator.Models.EmergencyConsultationModel
+
+@{
     ViewBag.Title = SiteMap.CurrentNode.Title;
 }
 
@@ -12,13 +14,22 @@
 @Html.Hidden("getSpecialistOnSchedule", Url.Action("GetSpecialistOnSchedule"))
 
 <div>
-    <div class="row well">
+    <div id="searchArea" class="row well">
         <div class="col-lg-4 col-md-6 col-sm-8 col-xs-12 form-group">
-            <label for="searchName">Лечебно заведение </label>
+            <label for="searchName">Лечебно заведение</label>
             <input type="text" id="searchHospital" class="form-control" />
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12 form-group">
+            <label for="searchGender">Пол</label>
+            @Html.DropDownList("searchGender", Model.Genders, "Избери...", new { @class = "form-control" })
+        </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12 form-group">
+            <label for="searchGender">Специалност</label>
+            @Html.DropDownList("searchSpeciality", Model.Specialities, "Избери...", new { @class = "form-control" })
         </div>
         <div class="col-lg-10 col-md-3 col-sm-8 col-xs-12 form-group">
             <button id="btnSearch" type="button" class="btn btn-primary">Търси</button>
+            <button id="btnClear" type="button" class="btn btn-default">Изчисти</button>
         </div>
     </div>
 
