--- a/Web/TeleConsult.Web/Areas/Consultations/Views/Consultation/Index.cshtml
+++ b/Web/TeleConsult.Web/Areas/Consultations/Views/Consultation/Index.cshtml
@@ -137,7 +137,7 @@
             {
                 if (string.IsNullOrEmpty(Model.ViewModel.PatientInitials) && !Model.IsSpecialist)
                 {
-                    <div class="alert alert-info">За да получите подтвърждаващ код, моля изпратете празен SMS на кратък номер 1234</div>
+                    <div class="alert alert-info">За да получите подтвърждаващ код, моля изпратете празен SMS на кратък номер 1234(към момента работи само с 289A0486-AB6A-4D9F-B269-68691764F675 за тестови цели)</div>
                     @Html.EditorFor(m => m.ViewModel.ConfirmationCode)
                 }
             }
